# deepfake-detector

./: .gitignore  HOW_TO_RUN.md  README.md  pyproject.toml  requirements.txt
backend/: app.py
backend/config/: default.yaml
backend/utilities/: infer.py  logging.py  train.py  train_image_tf.py
backend/utilities/data/: dataset.py
backend/utilities/pipelines/: inference_pipeline.py
docs/references/: ADVANCED_TRAINING_GUIDE.md  KAGGLE_QUICK_START.md  KAGGLE_TRAINING.md  MODEL_INTEGRATION_GUIDE.md
frontend/: README.md  index.html
frontend/css/: style.css
frontend/js/: app.js
models/efficientnet/: efficientnet_real_fake.classes.json  efficientnet_real_fake.metrics.json  efficientnet_real_fake.threshold.json
notebooks/: kaggle_efficientnetb3_faceforensics.ipynb  kaggle_mobilenetv2_faceforensics.ipynb
scripts/: infer.py  prepare_data.py  train.py  train_image_tf.py
src/deepfake_detector/: __init__.py  config.py
src/deepfake_detector/api/: app.py
src/deepfake_detector/data/: dataset.py  video.py
src/deepfake_detector/models/: efficientnet_gru.py  resnext_lstm.py
src/deepfake_detector/pipelines/: inference_pipeline.py  train_pipeline.py
tests/: test_config.py
tests/test_utilities/: test_config.py
